# django-all-auth-dropin

./: pyproject.toml
src/allauthdropin/: forms.py  models.py  settings.py  urls.py  views.py
src/allauthdropin/templates/: base.html  base_skeleton.html
src/allauthdropin/templates/account/: login.html  profile.html  signup.html
